fix: finishing font/dark mode. adding bold changing.

--- a/src/components/DrawerMenu/DrawerMenu.css
+++ b/src/components/DrawerMenu/DrawerMenu.css
@@ -17,8 +17,8 @@
 }
 
 .User {
-  font-size: 1.25rem;
-  font-weight: 500;
+  /* font-size: 1.25rem; */
+  /* font-weight: 500; */
   width: 80%;
   text-align: center;
   margin-top:2rem;
