--- a/src/components/MainHeader/MainHeader.css
+++ b/src/components/MainHeader/MainHeader.css
@@ -4,8 +4,8 @@
 }
 
 .User {
-  font-size: 1.25rem;
-  font-weight: 500;
+  /* font-size: 1.25rem; */
+  /* font-weight: 500; */
   width: 340px;
 }
 
